--- a/goliath-dependencies/build.gradle
+++ b/goliath-dependencies/build.gradle
@@ -3,11 +3,6 @@ plugins {
     id 'maven-publish'
 }
 
-/*
-def props = new Properties()
-rootProject.file("github.properties").withInputStream { props.load(it) }
-*/
-
 android {
     compileSdk 30
 
@@ -31,40 +26,20 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-/*afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                groupId = 'com.minipoc.goliasdependencies'
-                artifactId = 'goliasdependencies'
-                version = '1.0'
-            }
-        }
-        repositories {
-            maven {
-                name = "GitLab"
-                url = uri("https://gitlab.com/api/v4/projects/32262187/packages/maven")
 
-                credentials(HttpHeaderCredentials) {
-                    name = 'Private-Token'
-                    value = props.getProperty("ext.key")
-                }
-                authentication {
-                    header(HttpHeaderAuthentication)
-                }
-            }
-        }
-    }
-}*/
+ext {
+    PUBLISH_GROUP_ID = 'io.github.miniclip'
+    PUBLISH_VERSION = '0.1'
+    PUBLISH_ARTIFACT_ID = 'goliathdependencies'
+}
 
+apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
 
 dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1")
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation("androidx.core:core-ktx:1.6.0")
-    implementation("androidx.appcompat:appcompat:1.3.1")
     implementation("com.google.android.gms:play-services-analytics:17.0.1")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0")
     implementation("org.jetbrains.kotlin:kotlin-stdlib:1.5.31")
