--- a/goliath-dependencies/build.gradle
+++ b/goliath-dependencies/build.gradle
@@ -35,15 +35,16 @@ ext {
 
 apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
 
+def kotlinVersion = '1.6.0'
 dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1")
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
-    implementation("androidx.core:core-ktx:1.6.0")
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("androidx.core:core-ktx:${kotlinVersion}")
     implementation("com.google.android.gms:play-services-analytics:17.0.1")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.5.31")
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinVersion}")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+    implementation("androidx.lifecycle:lifecycle-process:2.3.1")
+    implementation ("androidx.lifecycle:lifecycle-common:2.3.1")
+    implementation ("androidx.lifecycle:lifecycle-common-java8:2.3.1")
 }
